prom-demo/prometheus-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
spec:
  hosts:
  - "prometheus.cdxvy30.tw"
  gateways:
  - istio-ingress/my-istio-ingress-gateway
  http:
  - match:
    route:
    - destination:
        host: prometheus-operated
        port:
          number: 9090
